--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "minecraft-debugger",
 	"displayName": "Minecraft Bedrock Edition Debugger",
 	"description": "Debug your JavaScript code running as part of the GameTest Framework experimental feature in Minecraft Bedrock Edition.",
-	"version": "0.8.0",
+	"version": "1.0.0",
 	"publisher": "mojang-studios",
 	"author": {
 		"name": "Mojang Studios"
@@ -14,6 +14,7 @@
 	},
 	"icon": "bedrock-icon.png",
 	"engines": {
+		"node": "^18.0.0",
 		"vscode": "^1.55.0"
 	},
 	"categories": [
@@ -153,9 +154,9 @@
 		"esbuild": "^0.12.5",
 		"eslint": "^7.19.0",
 		"glob": "^7.1.6",
-		"mocha": "^8.2.1",
+		"mocha": "^10.2.0",
 		"typescript": "^4.1.3",
-		"vsce": "^1.93.0",
+		"vsce": "^2.15.0",
 		"vscode-test": "^1.5.0"
 	}
 }
